# AuthFaceGraph

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  create_dummy_gnn.py  pyproject.toml  requirements.txt  verify_inference.py
backend/app/: __init__.py  main.py
backend/app/analysis/: behavior_tracker.py  biometric_enrollment_engine.py  eye_analyzer.py  face_detector.py  head_pose.py  identity_verifier.py  landmark_indices.py  mouth_analyzer.py  pipeline.py  quality_scorer.py
backend/app/api/routes/: auth.py  consent.py  health.py  models.py  sessions.py
backend/app/api/websocket/: handler.py  manager.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/dl/: __init__.py  base.py  engine.py  registry.py
backend/app/dl/action_units/: au_estimator.py
backend/app/dl/emotion/: efficientface.py  ensemble.py  hsemotion.py  xai_summary.py
backend/app/dl/graph/: constructor.py  gat.py
backend/app/dl/xai/: gnn_explainer.py
backend/app/expert_system/: explainer.py  rules.py  scorer.py
backend/app/models/: db_models.py  schemas.py
backend/app/utils/: calibration.py  frame_utils.py  math_utils.py
backend/tests/: conftest.py
backend/tests/integration/: test_websocket.py
backend/tests/performance/: test_pipeline_fps.py
backend/tests/unit/: test_biometric_enrollment_engine.py  test_deep_learning.py  test_expert_system.py  test_eye_analyzer.py  test_head_pose.py  test_identity_verifier.py
frontend/: Dockerfile  electron-builder.json  index.html  package-lock.json  (+3 more)
(+38 files in other folders)
